--- a/warframe_checklist/index.html
+++ b/warframe_checklist/index.html
@@ -1,6 +1,6 @@
-
 <head>
 <title>warframe checklist</title>
+<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 <div id="header" class="header">
