--- a/warframe_checklist/index.html
+++ b/warframe_checklist/index.html
@@ -3,6 +3,11 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+<script src="main.js"></script>
 <div id="header" class="header">
   <h1>Warframe Weapons Checklist</h1>
 </div>
