--- a/warframe_checklist/index.html
+++ b/warframe_checklist/index.html
@@ -1,6 +1,7 @@
 <head>
 <title>warframe checklist</title>
 <link rel="stylesheet" type="text/css" href="main.css">
+<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 </head>
 <body>
 <script
