--- a/warframe_checklist/index.html
+++ b/warframe_checklist/index.html
@@ -10,7 +10,7 @@
   crossorigin="anonymous"></script>
 <script src="main.js"></script>
 <div id="header" class="header">
-	<div id="version">v0.2.0</div>
+	<div id="version"></div>
 	<h1>Warframe Weapons Checklist</h1>
 </div>
 
