--- a/warframe_checklist/index.html
+++ b/warframe_checklist/index.html
@@ -1,56 +1,55 @@
 <head>
-<title>warframe checklist</title>
-<link rel="stylesheet" type="text/css" href="main.css">
-<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
+	<title>warframe checklist</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
+	<link rel="icon" type="image/png" href="favicon2.ico">
 </head>
+
 <body>
-<script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
-<script src="main.js"></script>
-<div id="header" class="header">
-	<div id="version"></div>
-	<h1>Warframe Weapons Checklist</h1>
-</div>
+	<script src="jquery-3.2.1.min.js"></script>
+	<script src="main.js"></script>
 
-<div id="sideNav" class="sidenav">
-  <input type="text" id="filter" placeholder="type here to search...">
-	<a href="#" id="primary" class="sidenav">Primary</a>
-	<div id="primary" class="side primary">
-		<a href="#" id="all">All</a>
-		<a href="#" id="semi">Semi-Auto</a>
-		<a href="#" id="auto">Auto</a>
-		<a href="#" id="shotgun">Shotgun</a>
-		<a href="#" id="bow">Bow</a>
-		<a href="#" id="sniper">Sniper</a>
-		<a href="#" id="other">Other</a>
+	<div id="header" class="header">
+		<div id="version"></div>
+		<h1>Warframe Checklist</h1>
+		<div id="topNav" class="topNav">
+			<ul id="navList">
+				<li><a href="#" id="warframe-link">Warframes</a></li>
+				<li><a href="#" id="weapon-link">Weapons</a></li>
+				<li><a href="#" id="scanner-link">Scan Targets</a></li>
+			</ul>
+		</div>
 	</div>
-	<a href="#" id="secondary" class="sidenav">Secondary</a>
-	<div id="secondary" class="side secondary">
-		<a href="#" id="all">All</a>
-		<a href="#" id="semi">Semi-Auto</a>
-		<a href="#" id="autp">Auto</a>
-		<a href="#" id="shotgun">Shotgun</a>
-		<a href="#" id="thrown">Thrown</a>
-		<a href="#" id="other">Other</a>
-	</div>
-	<a href="#" id="melee" class="sidenav">Melee</a>
-	<div id="melee" class="side melee">
-		<a href="#" id="all">All</a>
-		<a href="#" id="blade">Blade</a>
-		<a href="#" id="dagger">Dagger</a>
-		<a href="#" id="heavy">Heavy</a>
-		<a href="#" id="polearm">Polearm</a>
-		<a href="#" id="spar">Sparring</a>
-		<a href="#" id="thrown">Thrown</a>
-		<a href="#" id="whip">Whip</a>
-		<a href="#" id="other">Other</a>
-	</div>
-</div>
 
-<div id="main" class="main">
-<ul id="items">
-</ul>
-</div>
+	<div id="main" class="main content">
+		<div id="warframe-content" class="content hidden">
+			<div id="warframe-submenu" class="submenu">
+				<ul>
+					<li><input type="text" id="frame-filter" placeholder="type here to search..."></li>
+					<li><a href="#" id="all">All</a></li>
+					<li><a href="#" id="primary">Primes</a></li>
+					<li><a href="#" id="secondary">Non-Primes</a></li>
+					<li><a href="#" id="melee">Primeless</a></li>
+				</ul>
+			</div>
+			<ul id="frame-items" class="content-list">
+			</ul>
+		</div>
+		<div id="weapon-content" class="content hidden">
+			<div id="weapon-submenu" class="submenu">
+				<ul>
+					<li><input type="text" id="weapon-filter" class="filter" placeholder="type here to search..."></li>
+					<li><a href="#" id="all">All</a></li>
+					<li><a href="#" id="primary">Primary</a></li>
+					<li><a href="#" id="secondary">Secondary</a></li>
+					<li><a href="#" id="melee">Melee</a></li>
+				</ul>
+			</div>
+			<ul id="weapon-items" class="content-list">
+			</ul>
+		</div>
+		<div id="scanner-content" class="content hidden">
+			scanner placeholder
+		</div>
+	</div>
 </body>
